--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+
+  flutter_native_splash: ^2.2.7
+  flutter_phoenix: ^1.0.0
+  assets_audio_player: ^3.0.5
+  hexcolor: ^2.0.7
   change_app_package_name: ^1.1.0
   flutter_local_notifications: ^6.0.0
   provider: ^6.0.3
@@ -40,7 +45,9 @@ dependencies:
 
   wakelock: ^0.6.2
   flutter_neumorphic: ^3.2.0
+
   flutter_ringtone_player: ^3.2.0
+
   file_picker: ^5.0.1
   just_audio: ^0.9.28
   vibration: ^1.7.5
