--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,11 @@ environment:
 
 dependencies:
 
-  flutter_native_splash: ^2.2.7
   flutter_phoenix: ^1.0.0
   assets_audio_player: ^3.0.5
   hexcolor: ^2.0.7
   change_app_package_name: ^1.1.0
-  flutter_local_notifications: ^6.0.0
+  flutter_local_notifications: ^9.8.0+1
   provider: ^6.0.3
   intl: ^0.17.0
   mobx: ^2.0.7+5
