--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,7 @@ dependencies:
       ref: master
 
   wakelock: ^0.6.2
-  flutter_neumorphic: ^3.2.0
-
+  #flutter_neumorphic: ^3.2.0
   flutter_ringtone_player: ^3.2.0
 
   file_picker: ^5.0.1
