--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ environment:
 
 dependencies:
 
+#  flutter_alarm_background_trigger: ^1.0.1
   audio_session: ^0.1.10
   audio_service: 0.18.7
   rxdart: ^0.27.5
@@ -53,7 +54,7 @@ dependencies:
   flutter_ringtone_player: ^3.2.0
 
   file_picker: ^5.0.1
-  vibration: ^1.7.5
+  vibration: ^1.7.6
   flutter:
     sdk: flutter
 
