--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -62,6 +62,10 @@
             android:exported="true" />
 
 
+        <!-- flutter_foreground_task -->
+        <service android:name="com.pravera.flutter_foreground_task.service.ForegroundService" />
+
+
         <!-- ADD THIS "SERVICE" element -->
         <service android:name="com.ryanheise.audioservice.AudioService"
             android:foregroundServiceType="mediaPlayback"
