--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.dreamapps.wakeup">
+    package="pl.dreamapps.wakeup">
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
@@ -85,7 +85,7 @@
             </intent-filter>
         </receiver>
 
-<!--        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver"-->
+<!--        <receiver android:name="pl.dexterous.flutterlocalnotifications.ScheduledNotificationBootReceiver"-->
 <!--            android:enabled="true"-->
 <!--            android:exported="true">-->
 <!--            <intent-filter>-->
@@ -93,7 +93,7 @@
 <!--                <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>-->
 <!--            </intent-filter>-->
 <!--        </receiver>-->
-<!--        <receiver android:name="com.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver"-->
+<!--        <receiver android:name="pl.dexterous.flutterlocalnotifications.ScheduledNotificationReceiver"-->
 <!--            android:enabled="true"-->
 <!--            android:exported="true"/>-->
         <!-- Don't delete the meta-data below.
