--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,10 @@ homepage: https://dream-apps.pl
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 2.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.18.1 <3.0.0"
 
 dependencies:
 
@@ -35,12 +35,12 @@ dependencies:
 
   flutter_phoenix: ^1.1.0
   assets_audio_player: ^3.0.5
-  hexcolor: ^2.0.7
+  hexcolor: ^3.0.1
   change_app_package_name: ^1.1.0
-  flutter_local_notifications: ^11.0.1
-  provider: ^6.0.3
+  flutter_local_notifications: ^12.0.2
+  provider: ^6.0.4
   intl: ^0.17.0
-  mobx: ^2.1.0
+  mobx: ^2.1.1
   flutter_mobx: ^2.0.6+4
   json_annotation: ^4.7.0
   path_provider: ^2.0.11
@@ -51,7 +51,7 @@ dependencies:
   #flutter_neumorphic: ^3.2.0
   flutter_ringtone_player: ^3.2.0
 
-  file_picker: ^5.2.0+1
+  file_picker: ^5.2.1
   vibration: ^1.7.6
   flutter:
     sdk: flutter
@@ -63,8 +63,8 @@ dependencies:
 
 dev_dependencies:
   mobx_codegen: ^2.0.7+3
-  build_runner: ^2.2.1
-  json_serializable: ^6.4.1
+  build_runner: ^2.3.0
+  json_serializable: ^6.5.1
   flutter_test:
     sdk: flutter
 
