--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -104,24 +104,24 @@
 
 
         <!-- android_alarm_manager_plus -->
-<!--        <service-->
-<!--            android:name="dev.fluttercommunity.plus.androidalarmmanager.AlarmService"-->
-<!--            android:permission="android.permission.BIND_JOB_SERVICE"-->
-<!--            android:exported="false"/>-->
-<!--        <receiver-->
-<!--            android:name="dev.fluttercommunity.plus.androidalarmmanager.AlarmBroadcastReceiver"-->
-<!--            android:exported="false"/>-->
-<!--        <receiver-->
-<!--            android:name="dev.fluttercommunity.plus.androidalarmmanager.RebootBroadcastReceiver"-->
-<!--            android:enabled="false"-->
-<!--            android:exported="false">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.BOOT_COMPLETED" />-->
-<!--            </intent-filter>-->
-<!--        </receiver>-->
-
-
         <service
+           android:name="dev.fluttercommunity.plus.androidalarmmanager.AlarmService"
+           android:permission="android.permission.BIND_JOB_SERVICE"
+           android:exported="false"/>
+        <receiver
+           android:name="dev.fluttercommunity.plus.androidalarmmanager.AlarmBroadcastReceiver"
+           android:exported="false"/>
+        <receiver
+           android:name="dev.fluttercommunity.plus.androidalarmmanager.RebootBroadcastReceiver"
+           android:enabled="false"
+           android:exported="false">
+           <intent-filter>
+               <action android:name="android.intent.action.BOOT_COMPLETED" />
+           </intent-filter>
+        </receiver>
+
+
+        <!-- <service
             android:name="dev.fluttercommunity.plus.androidalarmmanager.AlarmService"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:foregroundServiceType="mediaPlayback"
@@ -143,7 +143,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"></action>
             </intent-filter>
-        </receiver>
+        </receiver> -->
 
     </application>
 </manifest>
