--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.0.11
   # flutter_audio_query: ^0.3.5+6
   android_alarm_manager_plus: ^2.1.0
+  workmanager: ^0.5.1
 
   wakelock: ^0.6.2
   #flutter_neumorphic: ^3.2.0
