--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   assets_audio_player: ^3.0.5
   hexcolor: ^3.0.1
   change_app_package_name: ^1.1.0
-  flutter_local_notifications: ^12.0.3
+  flutter_local_notifications: ^13.0.0
   provider: ^6.0.4
   intl: ^0.17.0
   mobx: ^2.1.1
@@ -46,7 +46,8 @@ dependencies:
   path_provider: ^2.0.11
   # flutter_audio_query: ^0.3.5+6
   android_alarm_manager_plus: ^2.1.0
-  workmanager: ^0.5.1
+  # workmanager: ^0.5.1
+  alarm: ^0.0.4
 
   wakelock: ^0.6.2
   #flutter_neumorphic: ^3.2.0
