--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   android_alarm_manager_plus: ^2.1.0
   # workmanager: ^0.5.1
   alarm: ^0.0.5
+  external_app_launcher: ^3.1.0
 
   wakelock: ^0.6.2
   #flutter_neumorphic: ^3.2.0
