--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,9 +56,10 @@ dependencies:
 
   file_picker: ^5.2.2
   vibration: ^1.7.6
+  flutter_native_splash: ^2.2.16
   flutter:
     sdk: flutter
-
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -79,6 +80,11 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+flutter_native_splash:
+  color: "#000000"
+  image: assets/ic_launcher_round.png
+  ios: false
+  
 flutter:
 
   # The following line ensures that the Material Icons font is
