--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,21 +27,21 @@ dependencies:
   flutter_foreground_task: ^3.10.0
   app_to_foreground: ^0.0.3
 
-  audio_session: ^0.1.10
+  audio_session: ^0.1.13
   audio_service: ^0.18.9
-  rxdart: ^0.27.6
-  just_audio: ^0.9.30
-  just_audio_background: ^0.0.1-beta.7
+  rxdart: ^0.27.7
+  just_audio: ^0.9.31
+  just_audio_background: ^0.0.1-beta.9
 
   flutter_phoenix: ^1.1.0
-  assets_audio_player: ^3.0.5
+  assets_audio_player: ^3.0.6
   hexcolor: ^3.0.1
   change_app_package_name: ^1.1.0
   flutter_local_notifications: ^13.0.0
-  provider: ^6.0.4
+  provider: ^6.0.5
   intl: ^0.18.0
-  mobx: ^2.1.1
-  flutter_mobx: ^2.0.6+4
+  mobx: ^2.1.3
+  flutter_mobx: ^2.0.6+5
   json_annotation: ^4.7.0
   path_provider: ^2.0.11
   # flutter_audio_query: ^0.3.5+6
@@ -52,9 +52,9 @@ dependencies:
   wakelock: ^0.6.2
   #flutter_neumorphic: ^3.2.0
   flutter_ringtone_player: ^3.2.0
-  timezone: ^0.9.0
+  timezone: ^0.9.1
 
-  file_picker: ^5.2.2
+  file_picker: ^5.2.5
   vibration: ^1.7.6
   flutter:
     sdk: flutter
@@ -65,14 +65,12 @@ dependencies:
   # cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  mobx_codegen: ^2.0.7+3
-  build_runner: ^2.3.0
-  json_serializable: ^6.5.1
+  mobx_codegen: ^2.1.1
+  build_runner: ^2.3.3
+  json_serializable: ^6.5.4
   flutter_test:
     sdk: flutter
 
-  # integration_test: ^1.0.1
-  test: ^1.21.0
   flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
